      by default.
    * When dragging and dropping and/or adding nodes the nodes that whose
      locations have changed are always visible after the change.
    * Added a Close All action to the file menu so that users can close all of
      the open xml documents at once.
    * Made it so that external dtds are not loaded since jsXe can't do anything
      with them anyway.

04/21/2004  version 0.1.67  Ian Lewis <IanLewis@member.fsf.org>

    * Made it so that element nodes can't be edited in the JTree unless
      you select 'Rename Node' from the context menu. This is done because of
      some problems with compatiblity between the editing and drag and drop.
    * The DefaultView now uses the default options set in the
      documentview.default.props file. Any properties used by this class should
      have default values set in this properties file.

04/20/2004  version 0.1.66  Ian Lewis <IanLewis@member.fsf.org>

    * Made split panes in the default tree view one touch expandable.
    * Made it so if opening a file and the only document open is untitled
      and clean then jsXe closes it.

04/18/2004  version 0.1.65  Ian Lewis <IanLewis@member.fsf.org>

    * Cleaned up some code in the TabbedView class. Removed the public update()
      method.
    * Changed some actions in the DefaultViewTree extend AbstractAction since
      they will probobly have key mnemonics in the future.
    * Added key mnemonics to the menu bar items so that you can navigate them
      easier using the keyboard.

04/17/2004  version 0.1.64  Ian Lewis <IanLewis@member.fsf.org>

    * Added logic to the tree in the Default view so that dragged and dropped
      nodes are always visible after a drop. New nodes that are added
      through the context menu are also visible after they are added.
    * Fixed support for cdata-sections in the DOMSerializer

04/16/2004  version 0.1.63  Ian Lewis <IanLewis@member.fsf.org>
