@@ -11,6 +11,7 @@
       the open xml documents at once.
     * Made it so that external dtds are not loaded since jsXe can't do anything
       with them anyway.
+    * Implemented support for split-cdata-sections in the DOMSerializer
 
 04/21/2004  version 0.1.67  Ian Lewis <IanLewis@member.fsf.org>
 
